Feature/227 edit deck 3 (#470)
* #227: Split card collection into own component.

* #227: Add base setup to allow for cards to be edited.

* #227: Cleanup deck edit model.

* #227: Add logic to add/remove cards from deck.

* #227: Update deck details widget.

* #227: Save the deck cards.

* #227: Add tests for components.
